# musicplayer

./: CMakeLists.txt  PKGBUILD  README.md
qml/: Main.qml
qml/components/: ControlButton.qml  GlassPanel.qml  QueueItem.qml  TimelineSlider.qml
qml/theme/: Theme.qml
src/: main.cpp  playercontroller.cpp  playercontroller.h  playlistmodel.cpp  playlistmodel.h
